--- a/app/src/main/res/layout/fragment_book_marks.xml
+++ b/app/src/main/res/layout/fragment_book_marks.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SuraRead">
+    tools:context=".BookMarks">
 
-    <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/readQuranPDF"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:text="hello_blank_fragment BookMarks" />
 
-        />
-
-</RelativeLayout>
-
+</FrameLayout>
