--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -31,10 +31,12 @@
             android:drawableLeft="@drawable/quraldrwablelesftresize"/>
 
         <RadioGroup
+            android:id="@+id/radioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <RadioButton
+                android:id="@+id/horizontalRB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
@@ -42,6 +44,7 @@
                 android:text="Horizontal ( Right to Left)"/>
 
             <RadioButton
+                android:id="@+id/verticalRB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
@@ -52,6 +55,12 @@
 
     </LinearLayout>
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/selectOptionTV"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -86,11 +95,12 @@
 
 
          <Switch
-             android:layout_width="wrap_content"
+             android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_alignParentEnd="true"
              android:layout_centerInParent="true"
+             android:checked="false"
              android:id="@+id/modeSwitch"/>
      </RelativeLayout>
 
