--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,30 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/displayTV"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:drawablePadding="15dp"
+        android:gravity="center_vertical"
+        android:textSize="25sp"
+        android:visibility="gone"
+        android:textColor="#090808"
+        android:textStyle="bold"/>
+
+
+    <TextView
+        android:id="@+id/displayTV2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:drawablePadding="15dp"
+        android:gravity="center_vertical"
+        android:visibility="gone"
+        android:layout_below="@id/displayTV"
+        android:textSize="25sp"
+        android:textColor="#090808"
+        android:textStyle="bold"/>
+
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/readQuranPDF"
         android:layout_width="match_parent"
