--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="red">#FD1604</color>
+    <color name="amber">#FFC107</color>
+    <color name="green">#1FFD06</color>
+
+
 </resources>
